# parallel-ML-Lab-NN

./: CMakeLists.txt  README.md
q1/: Makefile  nn.cpp
q2/: Makefile  nn.cpp
q3/: Makefile  nn.cpp
